--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2026-02-27 17:42:17
+ * @LastEditTime: 2026-02-27 18:03:14
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -146,7 +146,7 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h3>云原生平台资源自动化部署工具(Python)</h3>
+                        <h3>云平台资源自动化部署工具(Python)</h3>
                         <p>
                             成果: 帮助团队将项目部署准备工时从4小时降到30分钟, 并避免人工操作导致的配置错误. <br>
                             1. 通过IaaS API自动创建项目所需基础资源(安全组,ECS,负载均衡,DNS,VIP绑定等), 实现全链路自动化.<br>
@@ -155,7 +155,7 @@
                         </p>
                     </article>
                     <article>
-                        <h3>PTC业务日志采集与监控体系建设(ELK)</h3>
+                        <h3>PTC业务日志采集(ELK)</h3>
                         <p>
                             成果: 统一服务日志格式,提升服务的的日志查询效率. <br>
                             1. 编写多套Filebeat过滤规则, 解决原始日志格式不统一, 字段缺失等问题.<br>
@@ -165,7 +165,7 @@
                         </p>
                     </article>
                     <article>
-                        <h3>权益超市监控数据自动化上报(Python+ Selenium)</h3>
+                        <h3>权益超市监控数据自动化上报(Python+Selenium)</h3>
                         <p>
                             成果：替代人工每小时上报流程, 将重复工作自动上传.<br>
                             1. 使用Selenium定制XPath解析逻辑, 自动从Grafana中提取关键监控指标并生成图表/文本.<br>
